Java  수업 두 번째 커밋

--- a/edu/src/main/webapp/clientexam/reservation.html
+++ b/edu/src/main/webapp/clientexam/reservation.html
@@ -65,7 +65,7 @@ font-family: 'EF_jejudoldam';
 조식 <input type="checkbox"  name="addReq" value="조식"><br>
 <br>
 예약날짜 : 
-<input id=date_of_reservation name=date_of_reservation type=date min="년-09-13" max="2024-12-31" required>
+<input id=date_of_reservation name=date type=date min="년-09-13" max="2024-12-31" required>
 <hr>
 <input type="submit" value="보내기">
 <input type="reset" value="다시작성하기">
